# xy_frp

./: MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
xy_frp/: ModuleData.py
xy_frp/data/frp_0.49.0_linux_amd64/: frpc.ini  frpc.service
xy_frp/execute/: Main.py
