[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_frp"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "frp工具"

dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["xy_file", "xy_configure", "xy_settings"]

readme = "README.md"

[project.scripts]
xy_frp = "xy_frp.execute.Main:main"

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_frp"] # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
